<resources>
    <string name="app_name">Tennis</string>
    <string name="home">Home</string>
    <string name="courts">Courts</string>
    <string name="my_booking">My booking</string>
    <string name="profile">Profile</string>
    <string name="hi_tennis">Hi,Tennis</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="vip">vip</string>
    <string name="user_level">User level</string>
    <string name="member_expiration_date">Member expiration date</string>
    <string name="growth_value">Growth value</string>
    <string name="locations">Locations</string>
    <string name="records_of_consumption">Records of consumption</string>
    <string name="image_data_null">image data null</string>
    <string name="my_record">My record</string>
    <string name="my_competition">My competition</string>
    <string name="playing_record">Playing record</string>
    <string name="my_service">My service</string>
    <string name="search">search</string>
    <string name="recommend">Recommend</string>
    <string name="favourites">Favourites</string>
    <string name="club_facilities">Club Facilities</string>
    <string name="coach_team">Coach Team</string>
    <string name="booking">booking</string>
    <string name="membership">membership</string>
    <string name="visitor_enter">visitor enter</string>
    <string name="court_booking">Court Booking</string>
    <string name="please_choose_to_reserve_the_course">Please choose to reserve the course</string>
    <string name="book_now">Book Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="automatically_create_an_account_after_verification_of_an_unregistered_mobile_phone_number">Automatically create an account after verification of an unregistered mobile phone number</string>
    <string name="get_a_verification_code">Get a verification code</string>
    <string name="password_login">Password Login</string>
    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="verification_code_has_been_sent_to">Verification code has been sent to</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sms_login">SMS Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="retrieve_password">Retrieve password</string>
    <string name="next">Next</string>
    <string name="please_select_the_booking_date">Please select the booking date</string>
    <string name="please_select_the_booking_time">Please select the booking time</string>
    <string name="choose_a_country">Choose a country</string>
    <string name="details">Details</string>
    <string name="edit_profile">Edit profile</string>
    <string name="billing_history">Billing History</string>
    <string name="visit_history">Visit History</string>
    <string name="policies_and_agreements">Policies and agreements</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="profile_picture">Profile picture</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="email">Email*</string>
    <string name="phone">phone*</string>
    <string name="gender">Gender*</string>
    <string name="date_of_birth_minimum_age_16">Date of birth(minimum age:16)*</string>
    <string name="done">Done</string>
    <string name="historys">Historys</string>
</resources>