<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:elevation="10dp"
        android:padding="1.5dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleStyle"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_text_stroke_3f3939_05"
        android:padding="4dp"
        android:text="@string/settings"
        android:textColor="@color/text_title"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar"
        tools:ignore="SmallSp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_text_3f3939"
        android:padding="4dp"
        android:text="@string/notifications"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvSetting"
        app:layout_constraintEnd_toStartOf="@+id/tvSetting"
        app:layout_constraintTop_toTopOf="@+id/tvSetting"
        tools:ignore="SmallSp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17.5dp"
        android:textColor="@color/text_title"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
        tools:text="pokerfaceCmy" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingBar"
        android:layout_width="72dp"
        android:layout_height="11dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30.5dp"
        app:cardCornerRadius="7.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivVip"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="15.5dp"
                android:layout_marginTop="12.5dp"
                android:background="@color/purple_500"
                android:contentDescription="@string/vip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3.5dp"
                android:text="@string/user_level"
                android:textColor="#F21F48"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivVip"
                app:layout_constraintStart_toEndOf="@+id/ivVip"
                app:layout_constraintTop_toTopOf="@+id/ivVip" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4.5dp"
                android:text="@string/member_expiration_date"
                android:textColor="#737373"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@+id/ivVip"
                app:layout_constraintTop_toBottomOf="@+id/ivVip"
                tools:ignore="SmallSp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="11.5dp"
                android:progress="50"
                android:progressDrawable="@drawable/progressbar_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/growth_value"
                android:textColor="#737373"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tvGrowthValueContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:textColor="#737373"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv2"
                tools:text="再积174经验可升级>VIP2会员" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="25dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>