<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".domain.login.SmsLoginActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:text="Hello，\nWelcome to Tennis！"
        android:textColor="#101010"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="77dp"
        android:backgroundTint="#F8F8F8"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSelectCountryCode"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvCountryCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="+86"
                    android:textColor="#101010"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/shapeableImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_down"
                    app:layout_constraintBottom_toBottomOf="@+id/tvCountryCode"
                    app:layout_constraintStart_toEndOf="@+id/tvCountryCode"
                    app:layout_constraintTop_toTopOf="@+id/tvCountryCode" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginVertical="13dp"
                    android:background="#BBBBBB"
                    android:contentDescription="@string/image_data_null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@null"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingHorizontal="10dp"
                android:textColorHint="#B7B7B7"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/clSelectCountryCode"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:text="@string/automatically_create_an_account_after_verification_of_an_unregistered_mobile_phone_number"
        android:textColor="#999999"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
        app:layout_constraintStart_toStartOf="@+id/materialCardView2"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#DFDFDF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/get_a_verification_code"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="3dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:text="@string/password_login"
        android:textColor="#3291F8"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/btnGetCode"
        app:layout_constraintTop_toBottomOf="@+id/btnGetCode"
        tools:ignore="RtlSymmetry,SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>